Lots of styling. Hide prev AC windows on new one. Add filters panel.

--- a/app/components/bookmarks-panel.hbs
+++ b/app/components/bookmarks-panel.hbs
@@ -1,7 +1,7 @@
 <div class="bookmarks-panel container fluid panel">
     <div class="row">
-        <div class="col-4 p-0">
-            <h1 class="panel-title small"> Bookmarks</h1>
+        <div class="inline-title-cont col-4 p-0">
+            <h1 class="inline-title"> Bookmarks</h1>
         </div>
         <div class="col-8">
 
