--- a/app/components/history-panel.hbs
+++ b/app/components/history-panel.hbs
@@ -20,8 +20,8 @@
                                 {{else}}
                                     <img src="/assets/img/history_screenshot.jpg"  />
                                 {{/if}}
-                                <span className="title">{{item.id}}</span>
-                                <span className="time">{{item.time}}</span>
+                                <span class="title">{{item.id}}</span>
+                                <span class="time">{{item.time}}</span>
                             </li>
                         {{/each}}
                     
