--- a/app/components/main-panel.hbs
+++ b/app/components/main-panel.hbs
@@ -3,6 +3,10 @@
 
 <TopButtonsPanel />
 
+{{#if this.features.show_filters_panel}}
+    <FiltersPanel @model={{@model}} />
+{{/if}}
+
 {{#if this.features.allow_plain_text_quey}}
     <TextSearchPanel @model={{@model}} />
 {{/if}}
