--- a/app/components/likes-panel.hbs
+++ b/app/components/likes-panel.hbs
@@ -1,7 +1,7 @@
 <div class="likes-panel container fluid panel">
     <div class="row">
-        <div class="col-4 p-0">
-            <h2 class="panel-title small"> Likes</h2>
+        <div class="inline-title-cont col-4 p-0">
+            <h2 class="inline-title"> Likes</h2>
         </div>
         <div class="col-8">
 
