Edit empty frames a bit.

--- a/app/components/frame.hbs
+++ b/app/components/frame.hbs
@@ -1,10 +1,11 @@
+{{#if this.isFrameDefined}}
 <div class="frame col-2 {{if @frame.highlighted "highlighted"}} {{if @frame.liked "liked"}}"  
     style={{thumb this.thumbsUrlPrefix @frame.src}} 
     data-id={{@frame.id}}
     {{on "wheel" this.onWheel}}
     {{on "click" this.onClickFrame}}
 >
-    {{#if this.isFrameDefined}}
+    
         <div class="frame-overlay"data-id={{@frame.id}} >
             <button type="button" class="btn-bookmark btn btn-warning"
                 data-id={{@frame.id}} {{on "click" this.onBookmarkBtnClick}}><i class="fa fa-star" aria-hidden="true"></i></button>            
@@ -18,5 +19,11 @@
             <button type="button" data-id={{@frame.id}} class="btn-knn btn btn-primary"
                 {{on "click" this.onKnnBtnClick}}>k-NN</button>            
         </div>  
-    {{/if}}  
 </div>
+{{else}}
+
+<div class="frame empty col-2"  >
+
+</div>
+
+{{/if}}  
