--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -27,6 +27,7 @@
   <section class="modals section">
     <DetailWindow />
     <RelocationWindow />
+    <ZoomWindow />
     <ReplayWindow />
 
     <CollectorWindow @model={{@model}} />
