--- a/app/components/frame.hbs
+++ b/app/components/frame.hbs
@@ -4,6 +4,7 @@
     data-id={{@frame.id}}
     {{on "wheel" this.onWheel}}
     {{on "click" this.onClickFrame}}
+    data-src={{@frame.src}}
 >
     
         <div class="frame-overlay"data-id={{@frame.id}} >
@@ -12,6 +13,10 @@
                 <span class="shot-ID">{{@frame.sId}}</span>|
                 <span class="frame-ID">{{@frame.id}}</span>
             </span>
+
+            <button type="button" class="btn-zoom btn-secondary"
+                data-id={{@frame.id}} {{on "click" (fn this.onZoomBtnClick @frame.src)}}><i class="fa fa-search-plus" aria-hidden="true"></i></button>            
+
             <button type="button" class="btn-bookmark btn btn-warning"
                 data-id={{@frame.id}} {{on "click" this.onBookmarkBtnClick}}><i class="fa fa-star" aria-hidden="true"></i></button>            
 
