--- a/app/components/filters-panel.hbs
+++ b/app/components/filters-panel.hbs
@@ -15,6 +15,33 @@
                 Lower half
             </label>
         </div>
-        
+    </div>
+    <div class="row">
+        <div class="inline-title-cont col-6">
+            <h4 class="inline-title" tooltip="Specify days, hours, etc.">LSC filter</h4>
+        </div>
+        <div class="col-6">
+            <div class="row">
+                <p>Days: </p>
+                <div class="col">
+                    <div class="lsc-filters-cont">
+                        <div class="row">
+                            {{#each weekdays as |day index|}}
+                            <div>
+                                <label for="weekday-{{index}}">{{day}}</label>
+                                <input id="weekday-{{index}}" type="checkbox" checked />
+                            </div>
+                            {{/each}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <p>Hours: </p>
+                <div class="col">
+
+                </div>
+            </div>
+        </div>
     </div>
 </div>
