Add textboxes for hours

--- a/app/components/filters-panel.hbs
+++ b/app/components/filters-panel.hbs
@@ -39,7 +39,19 @@
             <div class="row">
                 <p>Hours: </p>
                 <div class="col">
-
+                    <div class="lsc-filters-cont">
+                        <div class="row">
+                            <div>
+                                <input class="lsc-filters-hours" type="number" value="0" min="0" max="24">
+                            </div>
+                            <div>
+                                <p>-</p>
+                            </div>
+                            <div>
+                                <input class="lsc-filters-hours" type="number" value="24" min="0" max="24">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
