--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -903,6 +903,9 @@ div.canvas-wrapper:nth-child(2) {
         margin-right: 0.2rem;
         margin-left: 0.2rem;
     }
+    .lsc-filters-hours {
+        width: 3.5rem;
+    } 
 }
 
 .bookmarks-panel {
