Add textboxes for years

--- a/app/components/filters-panel.hbs
+++ b/app/components/filters-panel.hbs
@@ -54,6 +54,24 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <p>Year: </p>
+                <div class="col">
+                    <div class="lsc-filters-cont">
+                        <div class="row">
+                            <div>
+                                <input class="lsc-filters-years" type="number" value="2000" min="2000">
+                            </div>
+                            <div>
+                                <p>-</p>
+                            </div>
+                            <div>
+                                <input class="lsc-filters-years" type="number" value="2021" min="2030">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
