--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -906,6 +906,9 @@ div.canvas-wrapper:nth-child(2) {
     .lsc-filters-hours {
         width: 3.5rem;
     } 
+    .lsc-filters-years {
+        width: 4rem;
+    }
 }
 
 .bookmarks-panel {
