--- a/app/components/filters-panel.hbs
+++ b/app/components/filters-panel.hbs
@@ -66,7 +66,7 @@
                                 <p>-</p>
                             </div>
                             <div>
-                                <input class="lsc-filters-years" type="number" value="2021" min="2030">
+                                <input class="lsc-filters-years" type="number" value="2021" max="2030">
                             </div>
                         </div>
                     </div>
