--- a/app/components/filters-panel.hbs
+++ b/app/components/filters-panel.hbs
@@ -1,4 +1,5 @@
 <div class="filters-panel container-fluid col-12">
+    {{#if this.features.show_dataset_filters_panel}}
     <div class="row">
 
         <div class="inline-title-cont col-6">
@@ -16,6 +17,8 @@
             </label>
         </div>
     </div>
+    {{/if}}
+    {{#if this.features.show_lsc_filters_panel}}
     <div class="row">
         <div class="inline-title-cont col-6">
             <h4 class="inline-title" tooltip="Specify days, hours, etc.">LSC filter</h4>
@@ -60,13 +63,13 @@
                     <div class="lsc-filters-cont">
                         <div class="row">
                             <div>
-                                <input class="lsc-filters-years" type="number" value="2000" min="2000">
+                                <input class="lsc-filters-years" type="number" value="2000" min="2000" max="2030">
                             </div>
                             <div>
                                 <p>-</p>
                             </div>
                             <div>
-                                <input class="lsc-filters-years" type="number" value="2021" max="2030">
+                                <input class="lsc-filters-years" type="number" value="2021" min="2000" max="2030">
                             </div>
                         </div>
                     </div>
@@ -74,4 +77,5 @@
             </div>
         </div>
     </div>
+    {{/if}}
 </div>
