--- a/app/components/bookmarks-panel.hbs
+++ b/app/components/bookmarks-panel.hbs
@@ -12,7 +12,7 @@
                 {{#if this.items}}
 
                     {{#each this.items as |item|}}
-                        <Frame @frame={{item}} />    
+                        <Frame @frame={{item}} @forceVisible={{true}} />    
                     {{/each}}                    
 
                 {{/if}}
