--- a/app/components/global-notification-window.hbs
+++ b/app/components/global-notification-window.hbs
@@ -2,8 +2,8 @@
 {{#if this.blockingNotification}}
 
     <div class="blocking-notification-cont">  
-        <div class="toast huge blocking-notification {{this.blockingNotification.type}}">
-            <h2 class="toast-header">{{this.blockingNotification.title}}</h2>
+        <div class="huge blocking-notification {{this.blockingNotification.type}}">
+            <h2 class="">{{this.blockingNotification.title}}</h2>
             {{#if this.blockingNotification.message}}
                 <div class="toast-body">{{this.blockingNotification.message}}</div>
             {{/if}}
