Changed default rescore from v2ww to clip

--- a/app/components/main-buttons-panel.hbs
+++ b/app/components/main-buttons-panel.hbs
@@ -5,16 +5,16 @@
             <div class="rescore-btns-container">
                 <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreTopScoredBtn}}>Rescore<br/>Top Scored</button>
                 <div class="clip-button-container">
-                    <button class="clip-button-absolute" id="topScoredClip" {{on "click" this.onClickRescoreTopScoredBtn}}>C</button>
+                    <button class="clip-button-absolute" id="topScoredSecondaryRescore" {{on "click" this.onClickRescoreTopScoredBtn}}>V</button>
                 </div>
                 <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreTopScoredContextBtn}}>Rescore<br/>Top Scored
                     Context</button>
                 <div class="clip-button-container">
-                    <button class="clip-button-absolute" id="topScoredContextClip" {{on "click" this.onClickRescoreTopScoredContextBtn}}>C</button>
+                    <button class="clip-button-absolute" id="topScoredContextSecondaryRescore" {{on "click" this.onClickRescoreTopScoredContextBtn}}>V</button>
                 </div>
                 <button class="btn-rescore btn-primary btn" type="button" {{on "click" this.onClickRescoreSomScoredBtn}}>Rescore<br/>SOM </button>
                 <div class="clip-button-container">
-                    <button class="clip-button-absolute" id="somClip" {{on "click" this.onClickRescoreSomScoredBtn}}>C</button>
+                    <button class="clip-button-absolute" id="somSecondaryRescore" {{on "click" this.onClickRescoreSomScoredBtn}}>V</button>
                 </div>
             </div>
         {{#if this.collectorMode}}
