--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -549,6 +549,7 @@ div.canvas-wrapper:nth-child(2) {
     height: 30px;
     font-size: 18px !important;
     color: #fff;
+    padding: 0;
 }
 
 .clip-button-absolute:hover{
