Added all and none buttons for days

--- a/app/components/filters-panel.hbs
+++ b/app/components/filters-panel.hbs
@@ -39,6 +39,16 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-4">
+                    <button class="btn-mini btn" type="button" {{on "click" this.onClickSelectAll}}>All </button>
+                </div>
+
+                <div class="col-4">
+                    <button class="btn-mini btn" type="button" {{on "click" this.onClickUnselectAll}}>None </button>
+                </div>
+            </div>
         </div>
         <div class="col-6">
             <div class="row">
@@ -47,13 +57,15 @@
                     <div class="lsc-filters-cont">
                         <div class="row">
                             <div>
-                                <input class="lsc-filters-hours" id="hoursFrom" type="number" value="{{ this.DEFAULT_LSC_FILTER_VALUES.hoursFrom }}" min="0" max="24">
+                                <input class="lsc-filters-hours" id="hoursFrom" type="number"
+                                    value="{{ this.DEFAULT_LSC_FILTER_VALUES.hoursFrom }}" min="0" max="24">
                             </div>
                             <div>
                                 <p>-</p>
                             </div>
                             <div>
-                                <input class="lsc-filters-hours" id="hoursTo" type="number" value="{{ this.DEFAULT_LSC_FILTER_VALUES.hoursTo }}" min="0" max="24">
+                                <input class="lsc-filters-hours" id="hoursTo" type="number"
+                                    value="{{ this.DEFAULT_LSC_FILTER_VALUES.hoursTo }}" min="0" max="24">
                             </div>
                         </div>
                     </div>
@@ -65,13 +77,15 @@
                     <div class="lsc-filters-cont">
                         <div class="row">
                             <div>
-                                <input class="lsc-filters-years" id="yearsFrom" type="number" value="{{ this.DEFAULT_LSC_FILTER_VALUES.yearsFrom }}" min="2000" max="2100">
+                                <input class="lsc-filters-years" id="yearsFrom" type="number"
+                                    value="{{ this.DEFAULT_LSC_FILTER_VALUES.yearsFrom }}" min="2000" max="2100">
                             </div>
                             <div>
                                 <p>-</p>
                             </div>
                             <div>
-                                <input class="lsc-filters-years" id="yearsTo" type="number" value="{{ this.DEFAULT_LSC_FILTER_VALUES.yearsTo }}" min="2000" max="2100">
+                                <input class="lsc-filters-years" id="yearsTo" type="number"
+                                    value="{{ this.DEFAULT_LSC_FILTER_VALUES.yearsTo }}" min="2000" max="2100">
                             </div>
                         </div>
                     </div>
