--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -97,6 +97,12 @@ span {
         border: 1px solid rgba(map-get($map: $theme-colors, $key: "white"), 1);
     }
 
+    &.btn-mini {
+        background-color: map-get($map: $theme-colors, $key: "fourth");
+        border: 1px solid rgba(map-get($map: $theme-colors, $key: "white"), 1);
+        padding: 3px;
+    }
+
     &.active {
         background-color: rgba(map-get($map: $theme-colors, $key: "warning"), 1) !important;
         border: 1px solid rgba(map-get($map: $theme-colors, $key: "warning"), 1) !important;
