--- a/app/components/replay-window.hbs
+++ b/app/components/replay-window.hbs
@@ -1,6 +1,23 @@
-
-
-
+{{!-- This file is part of SOMHunter UI.
+ *
+ * Copyright (C) 2022    Frantisek Mejzlik <frankmejzlik@gmail.com>
+ *                       Vit Skrhak <vitek.skrhak@seznam.cz>
+ *                       Patrik Veselý <prtrikvesely@gmail.com>
+ * 
+ *  SOMHunter UI is free software: you can redistribute it and/or modify it under
+ *  the terms of the GNU General Public License as published by the Free
+ *  Software Foundation, either version 2 of the License, or (at your option)
+ *  any later version.
+ * 
+ *  SOMHunter UI is distributed in the hope that it will be useful, but WITHOUT ANY
+ *  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ *  FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+ *  details.
+ * 
+ *  You should have received a copy of the GNU General Public License along with
+ *  SOMHunter UI. If not, see <https://www.gnu.org/licenses/>.
+ --}}
+ 
 <div id={{this.ELEM_IDS.REPLAY_WINDOW}} class="{{if this.windowVisible "visible"}} replay-window">
     <div id={{this.ELEM_IDS.REPLAY_WINDOW_SLIDER}} class="slider-row">
 
