--- a/app/components/text-autocomplete.hbs
+++ b/app/components/text-autocomplete.hbs
@@ -26,7 +26,7 @@
     value={{this.inputValue}} 
     selectionStart={{this.cursorIdx}}
     {{did-update this.didUpdateAttrs @model}}
-    {{!-- {{on "input" this.updateInputValue}} --}}
+    {{on "input" this.updateInputValue}} 
   />
 
   {{#if this.suggestions}}
